# ChangeLog for dev-python/git-python
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/git-python/ChangeLog,v 1.13 2014/11/18 10:23:03 jlec Exp $

*git-python-0.3.2.1 (18 Nov 2014)

  18 Nov 2014; Justin Lecher <jlec@gentoo.org> +git-python-0.3.2.1.ebuild:
  Version Bump

*git-python-0.3.2 (18 Nov 2014)

  18 Nov 2014; Justin Lecher <jlec@gentoo.org> -git-python-0.3.2_rc1.ebuild,
  -git-python-0.3.2_rc1-r1.ebuild, +git-python-0.3.2.ebuild, metadata.xml:
  Version Bump; drop RC

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> git-python-0.1.7.ebuild,
  git-python-0.3.2_rc1-r1.ebuild, git-python-0.3.2_rc1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*git-python-0.3.2_rc1-r1 (07 May 2013)

  07 May 2013; Ian Delaney <idella4@gentoo.org> +git-python-0.3.2_rc1-r1.ebuild:
  migrate -> distutils-r1

  24 Apr 2013; Jason A. Donenfeld <zx2c4@gentoo.org>
  git-python-0.3.2_rc1.ebuild:
  Library is needed at runtime.

  27 Aug 2011; Jesus Rivero <neurogeek@gentoo.org>
  git-python-0.3.2_rc1.ebuild:
  Added dev-python/gitdb to DEPEND

*git-python-0.3.2_rc1 (27 Aug 2011)

  27 Aug 2011; Magnus Granberg <zorry@gentoo.org> +git-python-0.3.2_rc1.ebuild:
  Newer version of git-python

  15 Jul 2010; Justin Lecher <jlec@gentoo.org> git-python-0.1.7.ebuild:
  Keyworded for *-linux prefix, tested by me

*git-python-0.1.7 (24 Apr 2010)

  24 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +git-python-0.1.7.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

  17 Mar 2010; Sebastian Pipping <sping@gentoo.org> git-python-0.1.6.ebuild:
  Propagate move of dev-util/git to dev-vcs/git

  22 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  git-python-0.1.6.ebuild:
  Tweak python dependency.

  22 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  git-python-0.1.6.ebuild:
  Small QA fixes.

*git-python-0.1.6 (21 Jun 2009)
