@@ -1,30 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST GitPython-0.1.7.tar.gz 18087 SHA256 03754bc7b256397c1b646e5048e2291590f5080171adb8b00f4e2d7384c76eee SHA512 e0721409fea009548773b7410051d4295be850683dbc45c692a142e3a8abebe12d3452b95384818170eef9a43ba1c3664f5ebe2702fcd7f6a9d8f1a46ab18083 WHIRLPOOL ab6017daea5b3e87d0ee58d7dfc9b40ad8f5434e8f7ec51df4ec5e6d680827dc2ea1225253b1ccff8855fd9cd9e6548f60d3b20be1de58c5560612cb8babddd6
-DIST GitPython-0.3.2.1.tar.gz 316777 SHA256 68a842b7f780863894c334ec0bc1315b7ba53142773f1fea6643f72c1f54046d SHA512 0361dcfa6d204f5c22ba7664f9522319934e702f54267723f3285a4a3f3a2ec238dbe6ddaf3a8d98f5bf5eaac3827aca3aeaa0c87bfba8b877ae4787c5996467 WHIRLPOOL fb384b9ba45c3edc35b8785fdd337eb2eecc9b9bb1fe4b671d45e73f875ffa1f06d65944552adcff3405e381aa96d53a40d1603eef6455f70a891dc048a78594
-DIST GitPython-0.3.2.tar.gz 314927 SHA256 094837061ed6d49f5f35fac36fb5885a73d267282d2aff0564e8705d2323e531 SHA512 8fede62d423a783c10dc305ec9aa3ba8f1b7f2cc9bc4ca0abaab7b01ec7f9f9afedc11600612c4aeaffe2e7e63f55deff56eeabf02010c83a930aa922ed165a4 WHIRLPOOL 10fbcb1f061268e0e7013e0536e4dd05fbff7c3dcbd88b2ee3715aeb9f991c0c77d587fed3ccfc1ac0da4843d3da3aba3f780466447d42dc4e083c723f6a9228
-EBUILD git-python-0.1.7.ebuild 783 SHA256 53fcdf1cf89447116fc74610b26607be8b3e48a543fd6f00de5e2933d5b21219 SHA512 cdaac1c58a9f9eb9bdeeb1eda06a6543ff9d337f91391c3c72a2576ce21206afbeb309392bd0ad7dc6c0c758533dc26564a79f8717f6c7ce1960ca82983c9907 WHIRLPOOL af066714bdf628fb1cae468d2c1696659e9ff4593f4db5a3783c041edfdb22abef29dc6665665a7c5d90368c323d0d476238915c31d90d1487158ac26b889854
-EBUILD git-python-0.3.2.1.ebuild 1045 SHA256 35c98ce9a17fadefee53cb2f645d8e23a4cddc69fba992c5800a541fafec8507 SHA512 81fe4d843c794b84a46829e68c1a67d37673455eda9b0a078b907b9aea35ddfe12ca84e1b063c0e91260807d099f3f2fb6c16ec56223b4a770812886f53e639e WHIRLPOOL e0873401e51129c925d8465de484309e162762086d8672c874d861a53119d9d28185ef9f0e8e5d950ed060616c6364f67c0394949286d3d39e5f483a95e22c4b
-EBUILD git-python-0.3.2.ebuild 830 SHA256 5a1fea7196cf22740ba36170be3ce8c4af7de15fb998428315b0d63ddfae8c47 SHA512 8d7420faa75786619aed2fb85efb25efa0eed71536f1366b128f95b667508e95d62e39aaf81e9715386600067ce51dd082c384a7cfe6988317b9b860fd52e88c WHIRLPOOL a926e2285b5e99d6e44384d5179f4e3177b14d872800ecf8615405d1ec8121c585725f336cde09537ce2fb861eea7b2f9485e52010f6bcaf7cc76198e169e870
-MISC ChangeLog 2082 SHA256 049d23bc1de37581c342d3743b1b17cb69600f7610aea84c217a4917d750d6ce SHA512 5c75114eaf993dda058014c96402094dabd4871c5ca228c19ca73dd186602764efd46e902fd18b312718b05669740e63f1153dfe8e911a06c703056d29c66e09 WHIRLPOOL d35d6f3ef72f96e264923c7928616aa535227ba25d8a5f15cb9eee310db2c3b8ec49f1dd031f4894abb115866b266f2997df628007ec331b746b4fdd04e902f5
+DIST GitPython-0.3.4.tar.gz 320028 SHA256 d51194a33953cd3e9be72582509393a72b09935652a9156e7330c5caa7f2fdd7 SHA512 e0120f5f52484f97d3666170e9d054661cbfabbdc10285f3a4b02282afed96b75e98ca890f5b484399408a035896ab5f5e8466ed2e63a9a77de3fdb5829d76ab WHIRLPOOL 42c2a830195b431ad28470d8121c637cece67bfa1d79bcacac6244cd59d46de2baa6fb5576c1ebfcfcff0f029bfddd9fb1310315acfb0c2700fd9dc15327d87c
+EBUILD git-python-0.3.4.ebuild 953 SHA256 3a3d9abc89697e471256f70b1749b0680688ddb82c04f48e3ddf08c967d9c83f SHA512 0497001a5e387d36d530256d1b348488f8050f35a125373d851d85a92f75f83ee5e59d66d9c9a40969ab247947ee633c21ab6b4d90c06923268fa7fcb592394e WHIRLPOOL c6a20df0e0d65609544e6ec9c49c39768d7c7fc5b6ab36cef8f32c62f31d5b168409df891d7b542e8310ed0a8298bf6f3289ad400bf37ea35a7fdfd6fddc9828
+MISC ChangeLog 2292 SHA256 c78d64ede8ea4dd66ca30e824cbbb527de4fd08413b9876a8b4f2b80867d2d2b SHA512 48da367d9b375f098f316f84e8f9f25dbc172876691a2afe3c99cd4b6db2661c1fc899e59b9b00c45f73f58eef653b2ca736a6b37cf41362c226997f37d09a6a WHIRLPOOL b9dbe11e4d90594c87d6ee1a35b4787d75cd224c8f45b93c743d1ed8b9b18ac928c36e3e79404cc8d6fb9f1944e5ac32cd02e02f4600c24ab27bb467afef5f21
 MISC metadata.xml 237 SHA256 566b07dcb4532130dadc2d38dace05f61c8f59c3d3e86f7733f3211130cbbf86 SHA512 1bd45d01ac900dd6cae33e777428f076b2864f89cd2f232b746c0a1ea22b54d588610588a4d1eeb25efc565df2650fdf6eb22360ec26248b6770e927a3ad6c65 WHIRLPOOL ff768866830653fc4a84f5fe545063bdccb5e2ab96569666f7bda6a4308cae491e82fafc634370367184b4372538eb2afb6c446c78420b9f88ad10e7cc845f07
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJUax4IXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirYYYP/2+51QWB0IAkQ1yjiwKYvGsQ
-59WfCFGweQCm6RP2ZV7Tsj84V+ftrfzO6vwicnAziZ6NccR9tdLGrQ336cXAernG
-pfH9bhvf+OvdkbJ6JUYInguMeacLQYlzj9djcKAp66L1j5qBr7TqV5YYoQKgf+wF
-xls7ylzITTceCcGtRUrwGSl4Abq090xTWM+N/ah7mMQxbBnftgA/ELoYtpxzuseL
-424iWavacNauzDablm4ifRBctFzZxPucFd5NyIU2baQ85kIlnxjJoifH0+/iZye7
-JncFigJ3WKT5wglzznm6+GPXGJkYhLdLy9PDzejnBDZdfB6AZ6tzDMLcQO+8kVSA
-WloYhw6i5wmAlzyuscqigkSYFa5zshqTOSN7/QvdDYzMzVzlUd9waMdubdSjt1fr
-7zgrZQQJe903H/92dAXNYRCuwgCi4aHM9EydFgoXroin6y+1TeiDgV+FB6okS3lG
-cIY4c+gqJYsspQX5p3v1LLNHCINz6aSnEZs62vcqv1zX+cEOSlkygqRzBYkS9KXw
-q7TD2yiqG/tDVvfT8PoDHCF5KUocqm7ey91pFlVwZ3NX1ln9s6RAGBZtRkw1s4aM
-+Jk4ew8Timy7gNWUwLg2tf4eyuCtwSd80WANf0nhHlT1K8FnFQ5wvCGZVa1/atSJ
-4D4LB5zTqud/NBeuSE3Q
-=98XQ
+iEYEAREIAAYFAlSzdN4ACgkQso7CE7gHKw0MbgCgrRH25HiI/eSGwuLQwK59jjg6
+NBQAnAwAtZ0haO39jqQ6CMVnU0DaLAOQ
+=6/jz
 -----END PGP SIGNATURE-----
