@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-vcs/git dev-python/setuptools =dev-lang/python-2*
-DESCRIPTION=GitPython is a python library used to interact with Git repositories
-EAPI=3
-HOMEPAGE=http://gitorious.org/git-python http://pypi.python.org/pypi/GitPython
-KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
-LICENSE=BSD
-RDEPEND=dev-vcs/git =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://pypi/G/GitPython/GitPython-0.1.7.tar.gz
-_eclasses_=distutils	92e738ea29389cb3f34778d7a349ac71	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=0a1498935e8d6095440782cab6f0ad9b
