@@ -1,15 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-vcs/git >=dev-python/gitdb-0.6.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( dev-python/nose[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/mock[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-DESCRIPTION=Library used to interact with Git repositories
-EAPI=5
-HOMEPAGE=http://gitorious.org/git-python http://pypi.python.org/pypi/GitPython
-IUSE=test python_targets_python2_7
-KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
-LICENSE=BSD
-RDEPEND=dev-vcs/git >=dev-python/gitdb-0.6.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=|| ( python_targets_python2_7 )
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://pypi/G/GitPython/GitPython-0.3.2.1.tar.gz
-_eclasses_=distutils-r1	6d697abf6c0c1d32af2c025a6b75e775	eutils	f99a767f569b1f0731b3a1edd17c1d11	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	5e9a53457b774d41e731613823baeb37	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=e9b8c2c7df8931a22e1a6f67cca0b948
