@@ -4,7 +4,7 @@ DESCRIPTION=X.Org X servers
 EAPI=5
 HOMEPAGE=http://xorg.freedesktop.org/
 IUSE=dmx kdrive xnest xorg xvfb ipv6 minimal nptl selinux +suid tslib +udev unwind static-libs doc
-KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
+KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
 LICENSE=MIT
 PDEPEND=xorg? ( >=x11-base/xorg-drivers-1.15 )
 RDEPEND=>=app-admin/eselect-opengl-1.0.8 dev-libs/openssl media-libs/freetype >=x11-apps/iceauth-1.0.2 >=x11-apps/rgb-1.0.3 >=x11-apps/xauth-1.0.3 x11-apps/xkbcomp >=x11-libs/libdrm-2.4.20 >=x11-libs/libpciaccess-0.12.901 >=x11-libs/libXau-1.0.4 >=x11-libs/libXdmcp-1.0.2 >=x11-libs/libXfont-1.4.2 >=x11-libs/libxkbfile-1.0.4 >=x11-libs/libxshmfence-1.1 >=x11-libs/pixman-0.27.2 >=x11-libs/xtrans-1.3.2 >=x11-misc/xbitmaps-1.0.1 >=x11-misc/xkeyboard-config-2.4.1-r3 dmx? ( x11-libs/libXt >=x11-libs/libdmx-1.0.99.1 >=x11-libs/libX11-1.1.5 >=x11-libs/libXaw-1.0.4 >=x11-libs/libXext-1.0.99.4 >=x11-libs/libXfixes-5.0 >=x11-libs/libXi-1.2.99.1 >=x11-libs/libXmu-1.0.3 x11-libs/libXrender >=x11-libs/libXres-1.0.3 >=x11-libs/libXtst-1.0.99.2 ) kdrive? ( >=x11-libs/libXext-1.0.5 x11-libs/libXv ) !minimal? ( >=x11-libs/libX11-1.1.5 >=x11-libs/libXext-1.0.5 >=media-libs/mesa-9.2.0[nptl=] ) tslib? ( >=x11-libs/tslib-1.0 ) udev? ( >=virtual/udev-150 ) unwind? ( sys-libs/libunwind ) >=x11-apps/xinit-1.3 selinux? ( sec-policy/selinux-xserver )
@@ -12,4 +12,4 @@ REQUIRED_USE=!minimal? ( || ( dmx kdrive xnest xorg xvfb ) )
 SLOT=0/1.15.2
 SRC_URI=http://xorg.freedesktop.org/releases/individual/xserver/xorg-server-1.15.2.tar.bz2 mirror://gentoo/xorg-server-1.16-cve-2014-8091..8103.patches.tar.xz
 _eclasses_=autotools	ae13678d52af6816cb92f952594d882a	autotools-utils	3727db64c7b960903d5033280f108080	eutils	f99a767f569b1f0731b3a1edd17c1d11	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	xorg-2	69479ff7a35a30e863a475568d29b9be
-_md5_=d2abf9e7f19c43b47121e672b13b9e11
+_md5_=2fb1219869298cf7be4559421e9cb19b
