@@ -49,7 +49,7 @@ EBUILD xorg-server-1.14.5.ebuild 6982 SHA256 1feb2b09207af6f99664b816e5a6162c3d9
 EBUILD xorg-server-1.14.7.ebuild 6990 SHA256 fb8095e48e36082fea4a0d49fb4d0c66cb79b47f4d06188391e752f58149065a SHA512 a3ef2659a70f9a10f85921765c059e2ff125db59acda51aeb1acb93976a4c3c8a5f940c38d7eab1fb44ac2f35e9830fd9fc84cf9148cf15c03c32316a8edca92 WHIRLPOOL 7700ca083678f604297203988788439d7b02682198129fc9c79b0005105bfe30df3e1e4c57a79164e914b8305399b4cb3c5b2a1f38e9cac6a9fd36735158880b
 EBUILD xorg-server-1.15.0.ebuild 7068 SHA256 4ab3e37740c91df1d3e10028617720be02f6a6be7b47d57ebf9b920fa2531397 SHA512 c82540f7f86fab4562f299eb038e78f42923e4976b49c5f8933f5e7ba5f0203dec79bc7fcbe923eeff7bc4874b0bdb6c3d04069991a847f1ce5d62b0cd706bce WHIRLPOOL 4d115d62329424d5ff53d39897d38a407cb323759876f482dd9b7eea0794e7d184a7ac17a69307b6821c219e56f057b4fc18804d4c86ed8ce7ce7d69e461b6fc
 EBUILD xorg-server-1.15.1.ebuild 7076 SHA256 7d5505d9cfb8fb0de119f04f96d903fd43b85ef42a3ed475f2f951ecd9b81f4c SHA512 47e4e63bdf6302621fbcc57a45963b0df87e30a973da46c8a0c98f228a78803f09d9671544eb57ca6333d792141207b807e7793f0e4533998809475a105f377f WHIRLPOOL df31d9e5c868d37e64e70763930a26236a9851685d54c81e3b0e38adba795066ac440919b2de7d9b698694701b06d728669cf72c67a5f2e7378b79b110c20f5a
-EBUILD xorg-server-1.15.2-r1.ebuild 7235 SHA256 84df42e2325f34cc88e57d68d4bd3cefe9f8e85605ef631c6740d2ed827fbb87 SHA512 34429e6714909389281f2c509a6715a46ea09d2729687ae82efe6d23a5b9c095893915297f34900c23d3e02e4a628b799fd24b9751f0f553795a9da9ee815884 WHIRLPOOL bb060a732c5957cf5acdf5d3aacbfc9822bc40c6c1d5342325a1a4935c7844a7fca33ab3e1f70b67bcbbaf003bb987781161721d5dca9f280f6cd0cb426c6513
+EBUILD xorg-server-1.15.2-r1.ebuild 7228 SHA256 d8618923131862e5af9c5a35105e9cd5274bcd39d8b6752e90fdb6363b8aef43 SHA512 3fe756676eed26674dcd7c0f7119e8c361f91c13826909cff4727d362cb5a24d1fbb95a86ffa2a6f3fe0cc1855f45f2b3d0460b30490cc0ba685b654b3484c8d WHIRLPOOL 049bce23a7a3c5e87b8dee5b416db65cad4cf4aa4388bfb212e5a7ae48052204f54a8159e170b1af390a0571970a1f487226cc88303bdca1f83cd4b623b7dd61
 EBUILD xorg-server-1.15.2.ebuild 7076 SHA256 7c8e019fc390eb1a5422f09b5660dd76c89cacae09c21163b0f3b73a847b8153 SHA512 16990e0a57dbb6bbad070f9e667c8462008f26027877925ab9190a161317da29bd1a569d03704ee7cd27ec2d39d1dfdf0354df6c1902f6dc3fdf5f4040a37299 WHIRLPOOL 7d88840be1a90d5cb3bda1bfc21e99565d9231e1eeeaaddb75d64bbba805214dff4dbf858ab56ec98ab27b64cb716d28e371bf6b8dfcecb725a5bffe570dbc49
 EBUILD xorg-server-1.16.0.ebuild 7623 SHA256 d1886ea3eda84940156dfa9f10d38a9f774e18a0cdbe79efe37a5b2236fcc615 SHA512 694e60a8564593ea1b5ad879a25b1b75b0b2ea1595046ea9c0b6a741620c4685304b793aa1ebaf6330614a6bf605bd99deda5f5892c5ee8e5040a507f6fe39f8 WHIRLPOOL 7068fa81114bf173e14d2af015a05b6155c01747dc83289ae2ec746f9553aa0359a543472a5a605c6126bd4ee03fd7202ad053271baa6ec074b53a777260d5a1
 EBUILD xorg-server-1.16.1.ebuild 7623 SHA256 91b59692c7147cf2df2e0723c26dbedba66e0e46452866be9a5e61e3fbb547c8 SHA512 a7f899d824576bebcef44d83c2a0a74b937ab96f7d6b28069b69b2b17c2715609bb4141396fdb5d2fac7527558df883db2f0a2768c75658d0f88f3958918418e WHIRLPOOL 3d43bfebc1feb5b8301bc6de3a74c6b91fd27b452529284ce828336bf9c6c22b56d398715fe2d044f77e344940041f137b8857f602841b75dd7a979700a149d6
@@ -60,13 +60,13 @@ EBUILD xorg-server-1.16.2.ebuild 7623 SHA256 dfb188091397b2dac45d341684b2196d399
 EBUILD xorg-server-1.16.3-r1.ebuild 6761 SHA256 285ba4a6c9c8e40b1261fae8f606c350dfa03df96fb233f0de237a981bfb8b4c SHA512 457d08a77be36547c4f1802cf0e965449e713e7f930754a10b32d996bfec23fbe69f2e96870d88798d5fc468229552d25a09f18b17c1b591b788552b3e202f66 WHIRLPOOL 1039b0eee178cf6b0f862ee2b26579658e9dbe32ee9c9f278b7c9938f228384dee2aa42ead4375492f6cab191cd322fcd12e59b67cddbc26fb9d0ed341268565
 EBUILD xorg-server-1.16.3.ebuild 7662 SHA256 ed4a52760a60b2baf5162235a5ce6d3c6c0aa87c91f4d05de3c209fbe1f41a61 SHA512 6687e90d925bcd1af3d2e21c2dc8abaec9866ab4952f04d0c2edefa54e00cf246b299ab73c4f5fd7fbf9af3802e4be892ee6e5c8135a7eddb2c1fb3fdad7d1f7 WHIRLPOOL 950ea824fbd63110f11d99d1387031c85c3ecaea7f231e18ac609153cf2f5e981ed284ebcf78b8a36b276447e5f86bd6318c2a168207497bf83048e86e01ef02
 EBUILD xorg-server-1.9.5-r3.ebuild 7967 SHA256 74e6a536de6c99f4c3081ca6f4b65c653e6b54d72ba17963b2186be0b031a3a6 SHA512 bb5b4f17f6fbd07cc1501019464b7b944599256e5ca0021d5481e6c194fd19fdb0e5029351b999b1efa621c61c1c7256970d431f99b3c31a659859649a09a63d WHIRLPOOL 4ff73d879f6a8c3c69d2f8f7414eb08d873187e3cbd6b4f1453d53398a3b13a93da4e3847a62c87e6b26f30fffb2fb7153b2e3da3a8bd0eaffc4eeb870701cb8
-MISC ChangeLog 59363 SHA256 b529521502d7b7dcc7ca88818ca599cb14a56e077e0dd636046833a9c2d25ccf SHA512 c6f4e3f60f092f19fa2ed249f2807c6028b97b348d6c5ef7c67f97df175bf8266d7e1283babf47d5d77db4e873185df305605045214871517aa63ecb99bfc614 WHIRLPOOL 66b4037284a74673bce720a59645a207112c40517fc0bff31b114dc294d7c261a74e555d4f4ac94c52196b7e00c4e6cbfe16e2c9d19f7108c72c03c62fe32084
+MISC ChangeLog 59468 SHA256 349cc8a10cb0b237c0ef11d64d76cfd931ed6c74ff51894bb6f99179de8fa283 SHA512 038811aab8af7e71866ca15aea5dadbba6311a14b3547d7a9e70bdf286235f5fc7b8a6da60e8a28478ca630f189ca05a12153dd67e02c79b96d11fc15a6c5d97 WHIRLPOOL b6771ca49b8ab7737e7f2960de1ecaf2e932c371377c5351726109ac84136d1aac5817a2054c0ebd6a12a83705f596507c9a8b67fb8a54d186837ade36f79ce0
 MISC ChangeLog-2009 109242 SHA256 76119bd85f64b74b4f8129911eef944e8f1baa3ae38bbfb65bcd6197a6f58c88 SHA512 200b2a1f8d66bc4461de84a5b675ae9bdc1fd38ffea339cdc69afdb613d7a6d6ffe29175fba62b10c4f9d95e050035933f59e21172bf9c545d7a70137c8d04f4 WHIRLPOOL 1c084a461e803c1a6627986cb2444cd7a23743f409df5bb1ca5f55d1e7c3106670cfc2cd4f875a479e0c75513b7937ee35b591b4016b715f7fa45209e098cece
 MISC metadata.xml 751 SHA256 02f470045d13e4baad4089f1cbc7cafd4dd1ab1b1799eeb2c0fb7864e956df80 SHA512 a58ad7f347519d7ba3bd710f1eab0f67925645961bcfa97fd9f106d5ea81400da79eebe95037ee4589b19c462fbdf6948949818f31210995ec9a930eaef78b26 WHIRLPOOL 67b3f0584a5c1d9e6da206761fc34a82caae36a4d9544c5512a95cdef800417c0f3f03a49606ebef72aa61522f097bf448fa0bdf651b5dd3b04554dcc86aaf5f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSygosACgkQakKUmsHeVLJA1wCdETfUTAR+A0Ko0dwuq5tgxOn9
-aIYAn21R23pQiCwuKoZYe9B3lICX0GYC
-=R7Dd
+iEYEAREIAAYFAlSzdyUACgkQVWmRsqeSphMnUwCfXlYZaJy31RiRnFvAEtuBwvIK
+s9AAniBz7BvNbq5tfr9ELOibhmdFM4ny
+=KbzN
 -----END PGP SIGNATURE-----
